  buffer overflow, which could be exploited to achieve escalated
  privileges.  This flaw was introduced in glibc 2.34.

  CVE-2025-0395: When the assert() function fails, it does not allocate
  enough space for the assertion failure message string and size
  information, which may lead to a buffer overflow if the message string
  size aligns to page size.

The following bugs are resolved with this release:

  [11053] regex: Wrong results with backreferences
  [12154] Do not fail DNS resolution for CNAMEs which are not host names
  [12889] nptl: Fix race between pthread_kill and thread exit
  [15333] libc: Use 64-bit stat functions in installed programs
  [15533] dynamic-link: LD_AUDIT introduces an avoidable performance
    degradation
  [19193] nptl: pthread_kill, pthread_cancel should not fail after exit
  [20975] Deferred cancellation triggers in __check_pf and looses lock leading to deadlock
  [22542] CVE-2022-23219: Buffer overflow in sunrpc clnt_create for "unix"
  [23734] la_symbind*() doesn't get called when LD_BIND_NOW is set
  [24816] Fix tst-nss-files-hosts-long on single-stack hosts
  [25812] Libio vtable protection is sometimes only partially enforced
  [26643] register x8 and quad sized NEON registers are not properly
    saved when using ld_audit on aarch64
  [27576] gmon: improve mcount overflow handling
  [27821] ungetc: Fix backup buffer leak on program exit
  [28036] Incorrect types for pthread_mutexattr_set/getrobust_np
  [28061] dynamic-link: A failing dlmopen called by an auditor crashed
  [28062] dynamic-link: Suppress audit calls when a (new) namespace is
    empty
  [28096] elf: audit calls that uses static tls might fail
  [28126] nftw aborts for paths longer than PATH_MAX
  [28182] _TIME_BITS=64 in C++ has issues with fcntl, ioctl, prctl
  [28223] mips: clone does not align stack
  [28310] Do not use affinity mask for sysconf (_SC_NPROCESSORS_CONF)
  [28338] undefined behavior in __tzfile_compute with oddball TZif file